syntax = "proto3";

package network;

option go_package = "github.com/bywise/go-bywise/src/proto/pb";

// PeerInfo contains information about a peer
message PeerInfo {
    string node_id = 1;      // Unique node identifier
    string address = 2;      // host:port format
    int64 connected_since = 3; // Unix timestamp when connected
}

// HandshakeRequest is sent to initiate connection
message HandshakeRequest {
    string node_id = 1;       // Requesting node's ID
    string address = 2;       // Requesting node's public address
    int64 timestamp = 3;      // Request timestamp
    string version = 4;       // Protocol version
    bytes nonce = 5;          // Random nonce for challenge
}

// HandshakeResponse is returned after successful handshake
message HandshakeResponse {
    bool accepted = 1;         // Whether connection was accepted
    string node_id = 2;        // Responding node's ID
    string token = 3;          // Access token for authenticated calls
    string reason = 4;         // Rejection reason if not accepted
    int64 timestamp = 5;       // Response timestamp
    bytes nonce_response = 6;  // Response to nonce challenge
}

// GetPeersRequest asks for connected peers
message GetPeersRequest {
    string token = 1;          // Auth token
    int32 max_peers = 2;       // Max peers to return
}

// GetPeersResponse returns list of known peers
message GetPeersResponse {
    repeated PeerInfo peers = 1;
}

// PingRequest for keepalive
message PingRequest {
    string token = 1;
    int64 timestamp = 2;
}

// PingResponse for keepalive
message PingResponse {
    int64 timestamp = 1;
    int64 server_timestamp = 2;
}

// DisconnectRequest to gracefully disconnect
message DisconnectRequest {
    string token = 1;
    string reason = 2;
}

// DisconnectResponse acknowledges disconnect
message DisconnectResponse {
    bool acknowledged = 1;
}

// AuthenticatedRequest wraps any authenticated request
message AuthenticatedRequest {
    string token = 1;
    string method = 2;
    bytes payload = 3;
    int64 timestamp = 4;
    string request_id = 5;
}

// AuthenticatedResponse wraps any authenticated response
message AuthenticatedResponse {
    bool success = 1;
    string error = 2;
    bytes payload = 3;
    string request_id = 4;
}

// Block represents a blockchain block
message Block {
    uint64 number = 1;
    bytes previous_hash = 2;
    int64 timestamp = 3;
    bytes miner_address = 4;
    bytes tx_root = 5;
    bytes state_root = 6;
    string checkpoint_cid = 7;
    bytes checkpoint_hash = 8;
    repeated Transaction transactions = 9;
    bytes miner_sig = 10;
}

// Transaction represents a blockchain transaction (stateless and self-contained)
// Can be validated in isolation without external state access.
// Two hashes exist:
// - ProposalHash: Implicit hash of the user proposal (can be computed from fields)
// - ID: Hash of the complete transaction including validator's execution evidence
message Transaction {
    bytes id = 1;

    // User Proposal (signed by user before sending to validator)
    bytes validator = 2;         // Validator chosen to process this transaction
    bytes from = 3;
    bytes to = 4;
    bytes value = 5;
    bytes nonce = 6;             // Replay protection - unique per (From, Nonce) pair
    uint64 block_limit = 7;      // Transaction expires after this block (0 = no limit)
    bytes data = 8;
    bytes user_sig = 9;          // User signature (authorizes the proposal)

    // Execution Evidence (filled by Validator after execution)
    uint64 sequence_id = 10;
    map<string, bytes> read_set = 11;  // Dependencies: keys AND values read
    map<string, bytes> write_set = 12; // State changes (key -> new value)
    bytes validator_sig = 13;          // Validator signature (confirms execution)
}

// BroadcastBlockRequest broadcasts a new block
message BroadcastBlockRequest {
    string token = 1;
    Block block = 2;
}

// BroadcastBlockResponse acknowledges block receipt
message BroadcastBlockResponse {
    bool accepted = 1;
    string reason = 2;
}

// GetBlockRequest requests a specific block
message GetBlockRequest {
    string token = 1;
    uint64 number = 2;       // Block number (if hash is empty)
    bytes hash = 3;          // Block hash (if number is 0)
}

// GetBlockResponse returns the requested block
message GetBlockResponse {
    bool found = 1;
    Block block = 2;
}

// GetBlocksRequest requests a range of blocks
message GetBlocksRequest {
    string token = 1;
    uint64 from_number = 2;
    uint64 to_number = 3;
    uint32 limit = 4;
}

// GetBlocksResponse returns multiple blocks
message GetBlocksResponse {
    repeated Block blocks = 1;
}

// GetLatestBlockRequest requests the latest block
message GetLatestBlockRequest {
    string token = 1;
}

// GetLatestBlockResponse returns the latest block info
message GetLatestBlockResponse {
    uint64 number = 1;
    bytes hash = 2;
}

// BroadcastTransactionRequest broadcasts a new transaction
message BroadcastTransactionRequest {
    string token = 1;
    Transaction transaction = 2;
}

// BroadcastTransactionResponse acknowledges transaction receipt
message BroadcastTransactionResponse {
    bool accepted = 1;
    string reason = 2;
    string tx_id = 3;
}

// NodeService provides P2P network operations
service NodeService {
    // Handshake initiates a connection between peers
    rpc Handshake(HandshakeRequest) returns (HandshakeResponse);

    // GetPeers returns list of connected peers for discovery
    rpc GetPeers(GetPeersRequest) returns (GetPeersResponse);

    // Ping keeps the connection alive
    rpc Ping(PingRequest) returns (PingResponse);

    // Disconnect gracefully closes the connection
    rpc Disconnect(DisconnectRequest) returns (DisconnectResponse);

    // Request makes an authenticated request
    rpc Request(AuthenticatedRequest) returns (AuthenticatedResponse);

    // BroadcastBlock broadcasts a new block to the network
    rpc BroadcastBlock(BroadcastBlockRequest) returns (BroadcastBlockResponse);

    // GetBlock retrieves a specific block
    rpc GetBlock(GetBlockRequest) returns (GetBlockResponse);

    // GetBlocks retrieves a range of blocks
    rpc GetBlocks(GetBlocksRequest) returns (GetBlocksResponse);

    // GetLatestBlock retrieves the latest block info
    rpc GetLatestBlock(GetLatestBlockRequest) returns (GetLatestBlockResponse);

    // BroadcastTransaction broadcasts a new transaction to the network
    rpc BroadcastTransaction(BroadcastTransactionRequest) returns (BroadcastTransactionResponse);
}
